Fix color contrast and align with mockup

--- a/assets/css/gokoala.css
+++ b/assets/css/gokoala.css
@@ -21,6 +21,14 @@ hgroup {
     color: var(--lightblue);
 }
 
+.card-header {
+    background-color: var(--bs-blue);
+}
+
+.card-header a {
+    color: var(--bs-white);
+}
+
 footer {
     background-color: var(--bs-blue);
 }
